jui-filter/src/main/java/com/effacy/jui/filter/parser/FilterQueryParser.java
/* FilterQueryParser.java */
/* Generated By:JJTree&JavaCC: Do not edit this line. FilterQueryParser.java */
package com.effacy.jui.filter.parser;

import com.effacy.jui.filter.builder.FieldMapper;
import com.effacy.jui.filter.builder.IExpressionBuildable;
import com.effacy.jui.filter.builder.IExpressionBuilder;
import com.effacy.jui.filter.builder.MappedExpresionBuilder;
import com.effacy.jui.filter.parser.BaseNode.ValueType;

public class FilterQueryParser/*@bgen(jjtree)*/implements FilterQueryParserTreeConstants, FilterQueryParserConstants {/*@bgen(jjtree)*/
  protected JJTFilterQueryParserState jjtree = new JJTFilterQueryParserState();
    public static ParsedExpression parse(String content) throws FilterQueryParserException {
        try {
            return new ParsedExpression (new FilterQueryParser(content).parse());
        } catch (java.lang.Throwable e) {
            throw new FilterQueryParserException(e.getMessage ());
        }
    }

    public static class ParsedExpression implements IExpressionBuildable<String> {
        protected AstRoot root;
        ParsedExpression(AstRoot root) {
            this.root = root;
        }
        public <T> T build(IExpressionBuilder<T,String> builder) {
            return root.build(builder);
        }
        public <T,F> T build(IExpressionBuilder<T,F> builder, FieldMapper<String,F> mapper) {
            return build(new MappedExpresionBuilder<T,String,F>(builder, mapper));
        }
        public void print() {
            root.print(0);
        }
    }

    public static class FilterQueryParserException extends Exception {
        public FilterQueryParserException(String message) {
            super (message);
        }
    }

/** Main production. */
  final public AstRoot parse() throws ParseException {/*@bgen(jjtree) Root */
  AstRoot jjtn000 = new AstRoot(this, JJTROOT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      OrExpression();
      jj_consume_token(0);
jjtree.closeNodeScope(jjtn000, true);
                         jjtc000 = false;
return jjtn000;
    } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
    throw new RuntimeException("Missing return statement in function");
}

  final public void OrExpression() throws ParseException {
    AndExpression();
    label_1:
    while (true) {
      if (jj_2_1(2)) {
        ;
      } else {
        break label_1;
      }
      jj_consume_token(OR);
AstOrExpression jjtn001 = new AstOrExpression(this, JJTOREXPRESSION);
           boolean jjtc001 = true;
           jjtree.openNodeScope(jjtn001);
      try {
        AndExpression();
      } catch (Throwable jjte001) {
if (jjtc001) {
             jjtree.clearNodeScope(jjtn001);
             jjtc001 = false;
           } else {
             jjtree.popNode();
           }
           if (jjte001 instanceof RuntimeException) {
             {if (true) throw (RuntimeException)jjte001;}
           }
           if (jjte001 instanceof ParseException) {
             {if (true) throw (ParseException)jjte001;}
           }
           {if (true) throw (Error)jjte001;}
      } finally {
if (jjtc001) {
             jjtree.closeNodeScope(jjtn001,  2);
           }
      }
    }
}

  final public void AndExpression() throws ParseException {
    NotExpression();
    label_2:
    while (true) {
      if (jj_2_2(2)) {
        ;
      } else {
        break label_2;
      }
      jj_consume_token(AND);
AstAndExpression jjtn001 = new AstAndExpression(this, JJTANDEXPRESSION);
            boolean jjtc001 = true;
            jjtree.openNodeScope(jjtn001);
      try {
        NotExpression();
      } catch (Throwable jjte001) {
if (jjtc001) {
              jjtree.clearNodeScope(jjtn001);
              jjtc001 = false;
            } else {
              jjtree.popNode();
            }
            if (jjte001 instanceof RuntimeException) {
              {if (true) throw (RuntimeException)jjte001;}
            }
            if (jjte001 instanceof ParseException) {
              {if (true) throw (ParseException)jjte001;}
            }
            {if (true) throw (Error)jjte001;}
      } finally {
if (jjtc001) {
              jjtree.closeNodeScope(jjtn001,  2);
            }
      }
    }
}

  final public void NotExpression() throws ParseException {
    if (jj_2_3(2)) {
      jj_consume_token(NOT);
AstNotExpression jjtn001 = new AstNotExpression(this, JJTNOTEXPRESSION);
          boolean jjtc001 = true;
          jjtree.openNodeScope(jjtn001);
      try {
        NotExpression();
      } catch (Throwable jjte001) {
if (jjtc001) {
            jjtree.clearNodeScope(jjtn001);
            jjtc001 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte001 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte001;}
          }
          if (jjte001 instanceof ParseException) {
            {if (true) throw (ParseException)jjte001;}
          }
          {if (true) throw (Error)jjte001;}
      } finally {
if (jjtc001) {
            jjtree.closeNodeScope(jjtn001,  1);
          }
      }
    } else if (jj_2_4(2)) {
      PrimaryExpression();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  final public void PrimaryExpression() throws ParseException {
    if (jj_2_5(2)) {
      ComparisonExpression();
    } else if (jj_2_6(2)) {
      jj_consume_token(LPAREN);
      OrExpression();
      jj_consume_token(RPAREN);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  final public void ComparisonExpression() throws ParseException {
    Field();
    if (jj_2_7(2)) {
      jj_consume_token(EQ);
AstEquals jjtn001 = new AstEquals(this, JJTEQUALS);
           boolean jjtc001 = true;
           jjtree.openNodeScope(jjtn001);
      try {
        SimpleValue();
      } catch (Throwable jjte001) {
if (jjtc001) {
             jjtree.clearNodeScope(jjtn001);
             jjtc001 = false;
           } else {
             jjtree.popNode();
           }
           if (jjte001 instanceof RuntimeException) {
             {if (true) throw (RuntimeException)jjte001;}
           }
           if (jjte001 instanceof ParseException) {
             {if (true) throw (ParseException)jjte001;}
           }
           {if (true) throw (Error)jjte001;}
      } finally {
if (jjtc001) {
             jjtree.closeNodeScope(jjtn001,  2);
           }
      }
    } else if (jj_2_8(2)) {
      jj_consume_token(NEQ);
AstNotEquals jjtn002 = new AstNotEquals(this, JJTNOTEQUALS);
              boolean jjtc002 = true;
              jjtree.openNodeScope(jjtn002);
      try {
        SimpleValue();
      } catch (Throwable jjte002) {
if (jjtc002) {
                jjtree.clearNodeScope(jjtn002);
                jjtc002 = false;
              } else {
                jjtree.popNode();
              }
              if (jjte002 instanceof RuntimeException) {
                {if (true) throw (RuntimeException)jjte002;}
              }
              if (jjte002 instanceof ParseException) {
                {if (true) throw (ParseException)jjte002;}
              }
              {if (true) throw (Error)jjte002;}
      } finally {
if (jjtc002) {
                jjtree.closeNodeScope(jjtn002,  2);
              }
      }
    } else if (jj_2_9(2)) {
      jj_consume_token(GT);
AstGreaterThan jjtn003 = new AstGreaterThan(this, JJTGREATERTHAN);
             boolean jjtc003 = true;
             jjtree.openNodeScope(jjtn003);
      try {
        SimpleValue();
      } catch (Throwable jjte003) {
if (jjtc003) {
               jjtree.clearNodeScope(jjtn003);
               jjtc003 = false;
             } else {
               jjtree.popNode();
             }
             if (jjte003 instanceof RuntimeException) {
               {if (true) throw (RuntimeException)jjte003;}
             }
             if (jjte003 instanceof ParseException) {
               {if (true) throw (ParseException)jjte003;}
             }
             {if (true) throw (Error)jjte003;}
      } finally {
if (jjtc003) {
               jjtree.closeNodeScope(jjtn003,  2);
             }
      }
    } else if (jj_2_10(2)) {
      jj_consume_token(GTE);
AstGreaterThanOrEqual jjtn004 = new AstGreaterThanOrEqual(this, JJTGREATERTHANOREQUAL);
              boolean jjtc004 = true;
              jjtree.openNodeScope(jjtn004);
      try {
        SimpleValue();
      } catch (Throwable jjte004) {
if (jjtc004) {
                jjtree.clearNodeScope(jjtn004);
                jjtc004 = false;
              } else {
                jjtree.popNode();
              }
              if (jjte004 instanceof RuntimeException) {
                {if (true) throw (RuntimeException)jjte004;}
              }
              if (jjte004 instanceof ParseException) {
                {if (true) throw (ParseException)jjte004;}
              }
              {if (true) throw (Error)jjte004;}
      } finally {
if (jjtc004) {
                jjtree.closeNodeScope(jjtn004,  2);
              }
      }
    } else if (jj_2_11(2)) {
      jj_consume_token(LT);
AstLessThan jjtn005 = new AstLessThan(this, JJTLESSTHAN);
             boolean jjtc005 = true;
             jjtree.openNodeScope(jjtn005);
      try {
        SimpleValue();
      } catch (Throwable jjte005) {
if (jjtc005) {
               jjtree.clearNodeScope(jjtn005);
               jjtc005 = false;
             } else {
               jjtree.popNode();
             }
             if (jjte005 instanceof RuntimeException) {
               {if (true) throw (RuntimeException)jjte005;}
             }
             if (jjte005 instanceof ParseException) {
               {if (true) throw (ParseException)jjte005;}
             }
             {if (true) throw (Error)jjte005;}
      } finally {
if (jjtc005) {
               jjtree.closeNodeScope(jjtn005,  2);
             }
      }
    } else if (jj_2_12(2)) {
      jj_consume_token(LTE);
AstLessThanOrEqual jjtn006 = new AstLessThanOrEqual(this, JJTLESSTHANOREQUAL);
              boolean jjtc006 = true;
              jjtree.openNodeScope(jjtn006);
      try {
        SimpleValue();
      } catch (Throwable jjte006) {
if (jjtc006) {
                jjtree.clearNodeScope(jjtn006);
                jjtc006 = false;
              } else {
                jjtree.popNode();
              }
              if (jjte006 instanceof RuntimeException) {
                {if (true) throw (RuntimeException)jjte006;}
              }
              if (jjte006 instanceof ParseException) {
                {if (true) throw (ParseException)jjte006;}
              }
              {if (true) throw (Error)jjte006;}
      } finally {
if (jjtc006) {
                jjtree.closeNodeScope(jjtn006,  2);
              }
      }
    } else if (jj_2_13(2)) {
      jj_consume_token(IN);
AstIn jjtn007 = new AstIn(this, JJTIN);
             boolean jjtc007 = true;
             jjtree.openNodeScope(jjtn007);
      try {
        ListValue();
      } catch (Throwable jjte007) {
if (jjtc007) {
               jjtree.clearNodeScope(jjtn007);
               jjtc007 = false;
             } else {
               jjtree.popNode();
             }
             if (jjte007 instanceof RuntimeException) {
               {if (true) throw (RuntimeException)jjte007;}
             }
             if (jjte007 instanceof ParseException) {
               {if (true) throw (ParseException)jjte007;}
             }
             {if (true) throw (Error)jjte007;}
      } finally {
if (jjtc007) {
               jjtree.closeNodeScope(jjtn007,  2);
             }
      }
    } else if (jj_2_14(2)) {
      jj_consume_token(NOT_IN);
AstNotIn jjtn008 = new AstNotIn(this, JJTNOTIN);
                 boolean jjtc008 = true;
                 jjtree.openNodeScope(jjtn008);
      try {
        ListValue();
      } catch (Throwable jjte008) {
if (jjtc008) {
                   jjtree.clearNodeScope(jjtn008);
                   jjtc008 = false;
                 } else {
                   jjtree.popNode();
                 }
                 if (jjte008 instanceof RuntimeException) {
                   {if (true) throw (RuntimeException)jjte008;}
                 }
                 if (jjte008 instanceof ParseException) {
                   {if (true) throw (ParseException)jjte008;}
                 }
                 {if (true) throw (Error)jjte008;}
      } finally {
if (jjtc008) {
                   jjtree.closeNodeScope(jjtn008,  2);
                 }
      }
    } else if (jj_2_15(2)) {
      jj_consume_token(CONTAINS);
AstContains jjtn009 = new AstContains(this, JJTCONTAINS);
                   boolean jjtc009 = true;
                   jjtree.openNodeScope(jjtn009);
      try {
        SimpleValue();
      } catch (Throwable jjte009) {
if (jjtc009) {
                     jjtree.clearNodeScope(jjtn009);
                     jjtc009 = false;
                   } else {
                     jjtree.popNode();
                   }
                   if (jjte009 instanceof RuntimeException) {
                     {if (true) throw (RuntimeException)jjte009;}
                   }
                   if (jjte009 instanceof ParseException) {
                     {if (true) throw (ParseException)jjte009;}
                   }
                   {if (true) throw (Error)jjte009;}
      } finally {
if (jjtc009) {
                     jjtree.closeNodeScope(jjtn009,  2);
                   }
      }
    } else if (jj_2_16(2)) {
      jj_consume_token(STARTS_WITH);
AstStartsWith jjtn010 = new AstStartsWith(this, JJTSTARTSWITH);
                      boolean jjtc010 = true;
                      jjtree.openNodeScope(jjtn010);
      try {
        SimpleValue();
      } catch (Throwable jjte010) {
if (jjtc010) {
                        jjtree.clearNodeScope(jjtn010);
                        jjtc010 = false;
                      } else {
                        jjtree.popNode();
                      }
                      if (jjte010 instanceof RuntimeException) {
                        {if (true) throw (RuntimeException)jjte010;}
                      }
                      if (jjte010 instanceof ParseException) {
                        {if (true) throw (ParseException)jjte010;}
                      }
                      {if (true) throw (Error)jjte010;}
      } finally {
if (jjtc010) {
                        jjtree.closeNodeScope(jjtn010,  2);
                      }
      }
    } else if (jj_2_17(2)) {
      jj_consume_token(ENDS_WITH);
AstEndsWith jjtn011 = new AstEndsWith(this, JJTENDSWITH);
                    boolean jjtc011 = true;
                    jjtree.openNodeScope(jjtn011);
      try {
        SimpleValue();
      } catch (Throwable jjte011) {
if (jjtc011) {
                      jjtree.clearNodeScope(jjtn011);
                      jjtc011 = false;
                    } else {
                      jjtree.popNode();
                    }
                    if (jjte011 instanceof RuntimeException) {
                      {if (true) throw (RuntimeException)jjte011;}
                    }
                    if (jjte011 instanceof ParseException) {
                      {if (true) throw (ParseException)jjte011;}
                    }
                    {if (true) throw (Error)jjte011;}
      } finally {
if (jjtc011) {
                      jjtree.closeNodeScope(jjtn011,  2);
                    }
      }
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  final public void Field() throws ParseException {/*@bgen(jjtree) Field */
                        AstField jjtn000 = new AstField(this, JJTFIELD);
                        boolean jjtc000 = true;
                        jjtree.openNodeScope(jjtn000);Token t;
    try {
      t = jj_consume_token(IDENTIFIER);
jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
jjtn000.setImage(t.image);
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
}

  final public void SimpleValue() throws ParseException {/*@bgen(jjtree) Value */
                              AstValue jjtn000 = new AstValue(this, JJTVALUE);
                              boolean jjtc000 = true;
                              jjtree.openNodeScope(jjtn000);Token t;
    try {
      if (jj_2_18(2)) {
        t = jj_consume_token(STRING);
jjtree.closeNodeScope(jjtn000, true);
                   jjtc000 = false;
jjtn000.setImage(t.image.substring(1, t.image.length() - 1)); jjtn000.setValueType(ValueType.STRING);
      } else if (jj_2_19(2)) {
        t = jj_consume_token(IDENTIFIER);
jjtree.closeNodeScope(jjtn000, true);
                       jjtc000 = false;
jjtn000.setImage(t.image); jjtn000.setValueType(ValueType.LITERAL);
      } else if (jj_2_20(2)) {
        t = jj_consume_token(INTEGER);
jjtree.closeNodeScope(jjtn000, true);
                    jjtc000 = false;
jjtn000.setImage(t.image); jjtn000.setValueType(ValueType.INTEGER);
      } else if (jj_2_21(2)) {
        t = jj_consume_token(DECIMAL);
jjtree.closeNodeScope(jjtn000, true);
                    jjtc000 = false;
jjtn000.setImage(t.image); jjtn000.setValueType(ValueType.DECIMAL);
      } else if (jj_2_22(2)) {
        t = jj_consume_token(TRUE);
jjtree.closeNodeScope(jjtn000, true);
                 jjtc000 = false;
jjtn000.setImage("true"); jjtn000.setValueType(ValueType.BOOLEAN);
      } else if (jj_2_23(2)) {
        t = jj_consume_token(FALSE);
jjtree.closeNodeScope(jjtn000, true);
                  jjtc000 = false;
jjtn000.setImage("false"); jjtn000.setValueType(ValueType.BOOLEAN);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
}

  final public void ListValue() throws ParseException {/*@bgen(jjtree) List */
  AstList jjtn000 = new AstList(this, JJTLIST);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(LBRACKET);
      SimpleValue();
      label_3:
      while (true) {
        if (jj_2_24(2)) {
          ;
        } else {
          break label_3;
        }
        jj_consume_token(COMMA);
        SimpleValue();
      }
      jj_consume_token(RBRACKET);
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
}

  private boolean jj_2_1(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_1()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  private boolean jj_2_2(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_2()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  private boolean jj_2_3(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_3()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  private boolean jj_2_4(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_4()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  private boolean jj_2_5(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_5()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  private boolean jj_2_6(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_6()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  private boolean jj_2_7(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_7()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  private boolean jj_2_8(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_8()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(7, xla); }
  }

  private boolean jj_2_9(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_9()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(8, xla); }
  }

  private boolean jj_2_10(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_10()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(9, xla); }
  }

  private boolean jj_2_11(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_11()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(10, xla); }
  }

  private boolean jj_2_12(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_12()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(11, xla); }
  }

  private boolean jj_2_13(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_13()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(12, xla); }
  }

  private boolean jj_2_14(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_14()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(13, xla); }
  }

  private boolean jj_2_15(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_15()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(14, xla); }
  }

  private boolean jj_2_16(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_16()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(15, xla); }
  }

  private boolean jj_2_17(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_17()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(16, xla); }
  }

  private boolean jj_2_18(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_18()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(17, xla); }
  }

  private boolean jj_2_19(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_19()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(18, xla); }
  }

  private boolean jj_2_20(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_20()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(19, xla); }
  }

  private boolean jj_2_21(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_21()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(20, xla); }
  }

  private boolean jj_2_22(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_22()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(21, xla); }
  }

  private boolean jj_2_23(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_23()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(22, xla); }
  }

  private boolean jj_2_24(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_24()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(23, xla); }
  }

  private boolean jj_3_7()
 {
    if (jj_scan_token(EQ)) return true;
    if (jj_3R_SimpleValue_157_5_9()) return true;
    return false;
  }

  private boolean jj_3R_ComparisonExpression_131_3_7()
 {
    if (jj_3R_Field_149_3_11()) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_7()) {
    jj_scanpos = xsp;
    if (jj_3_8()) {
    jj_scanpos = xsp;
    if (jj_3_9()) {
    jj_scanpos = xsp;
    if (jj_3_10()) {
    jj_scanpos = xsp;
    if (jj_3_11()) {
    jj_scanpos = xsp;
    if (jj_3_12()) {
    jj_scanpos = xsp;
    if (jj_3_13()) {
    jj_scanpos = xsp;
    if (jj_3_14()) {
    jj_scanpos = xsp;
    if (jj_3_15()) {
    jj_scanpos = xsp;
    if (jj_3_16()) {
    jj_scanpos = xsp;
    if (jj_3_17()) return true;
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    return false;
  }

  private boolean jj_3_6()
 {
    if (jj_scan_token(LPAREN)) return true;
    if (jj_3R_OrExpression_103_3_8()) return true;
    return false;
  }

  private boolean jj_3R_PrimaryExpression_125_5_6()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_5()) {
    jj_scanpos = xsp;
    if (jj_3_6()) return true;
    }
    return false;
  }

  private boolean jj_3_5()
 {
    if (jj_3R_ComparisonExpression_131_3_7()) return true;
    return false;
  }

  private boolean jj_3R_ListValue_167_5_10()
 {
    if (jj_scan_token(LBRACKET)) return true;
    return false;
  }

  private boolean jj_3_4()
 {
    if (jj_3R_PrimaryExpression_125_5_6()) return true;
    return false;
  }

  private boolean jj_3R_NotExpression_119_3_5()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_3()) {
    jj_scanpos = xsp;
    if (jj_3_4()) return true;
    }
    return false;
  }

  private boolean jj_3_3()
 {
    if (jj_scan_token(NOT)) return true;
    if (jj_3R_NotExpression_119_3_5()) return true;
    return false;
  }

  private boolean jj_3_23()
 {
    if (jj_scan_token(FALSE)) return true;
    return false;
  }

  private boolean jj_3_22()
 {
    if (jj_scan_token(TRUE)) return true;
    return false;
  }

  private boolean jj_3_21()
 {
    if (jj_scan_token(DECIMAL)) return true;
    return false;
  }

  private boolean jj_3_2()
 {
    if (jj_scan_token(AND)) return true;
    if (jj_3R_NotExpression_119_3_5()) return true;
    return false;
  }
